# TinyTCPClient

./: CMakeLists.txt  license
include/: TinyTCPClient.hpp
include/TinyHTTPClient/: TinyHTTPClient.hpp
src/: TinyTCPClient.cpp  TinyTCPClient_unix.cpp  TinyTCPClient_win.cpp
src/HTTP/: TinyHTTPClient.cpp
src/TinyHTTPClient/: TinyHTTPClient.cpp  TinyHTTPClient_unix.cpp  TinyHTTPClient_win.cpp
src/util/: Buffer.cpp
test/: test.cpp  test_unix.cpp  test_win.cpp
